fix: fix navigation overflow on footer (because of absolute position)

--- a/corejs-dev/src/components/Theory/articlesPage.css
+++ b/corejs-dev/src/components/Theory/articlesPage.css
@@ -1,5 +1,5 @@
 .articles-nav-wrap{
-    position: absolute;
+    /* position: absolute; */
     left: 0;
     width: 200px;
 }
@@ -23,9 +23,9 @@
     border-bottom: 1px solid black;
 }
 .articles-wrap{
-    margin-left: 200px;
-    padding: 15px;
-    width: calc(100% - 200px);
+    /* margin-left: 200px; */
+    padding: 20px;
+    /* width: calc(100% - 200px); */
     text-align: initial
 }
 .articles-wrap p{
